[gd_scene load_steps=2 format=3 uid="uid://ddl6hmbolemig"]

[ext_resource type="Script" path="res://scenes/ui/menu/player_number_selection_menu/player_number_selection_menu.gd" id="1_h5u7c"]

[node name="PlayerNumberSelectionMenu" type="Control" groups=["menus"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h5u7c")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="OnePlayerButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1 Player"

[node name="TwoPlayersButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2 Players"

[node name="ThreePlayersButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3 Players"

[node name="FourPlayersButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4 Players"

[connection signal="pressed" from="GridContainer/OnePlayerButton" to="." method="_on_one_player_button_pressed"]
[connection signal="pressed" from="GridContainer/TwoPlayersButton" to="." method="_on_two_players_button_pressed"]
[connection signal="pressed" from="GridContainer/ThreePlayersButton" to="." method="_on_three_players_button_pressed"]
[connection signal="pressed" from="GridContainer/FourPlayersButton" to="." method="_on_four_players_button_pressed"]
